terraform/Security_Groups.tf
# Security Group for RDS
resource "aws_security_group" "rds-sec-grp" {
  name        = "rds-sec-group"
  description = "Allow traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description      = "VPC"
    from_port        = 5432
    to_port          = 5432
    protocol         = "tcp"
    security_groups  = [aws_security_group.fargate_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "rds-sec-group"
  }
}

# Security Group for Fargate
resource "aws_security_group" "fargate_sg" {
  name        = "fargate-sg"
  description = "Allow Fargate for fargate tasks"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
